# project-tony-shilati

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  Makefile  Project_Description.md  README.md
dependencies/BLDC_Drive_Control/: platformio.ini
dependencies/BLDC_Drive_Control/src/: SPI_Encoder.h  motors.cpp
docs/html/: annotated.html  annotated_dup.js  class_finger_widget-members.html  class_finger_widget.html  class_finger_widget.js  classes.html  classfm_1_1finger__model-members.html  classfm_1_1finger__model.html  classfm_1_1finger__model.js  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_7711e90abc3d4bd55823d9013a185d04.html  dir_7711e90abc3d4bd55823d9013a185d04.js  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.js  doxygen_crawl.html  files.html  finger__model_8cpp.html  finger__model_8hpp.html  finger__model_8hpp.js  finger__model_8hpp_source.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  main_8cpp.html  namespacefm.html  namespacefm.js  namespacemembers.html  namespacemembers_func.html  namespaceopen__chain__kinematics.html  namespacerigid__body__motion.html  namespaces.html  namespaces_dup.js  navtreedata.js  (+15 more)
docs/html/search/: all_0.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  classes_0.js  defines_0.js  files_0.js  files_2.js  files_3.js  files_4.js  functions_1.js  functions_2.js  functions_3.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  functions_c.js  namespaces_0.js  namespaces_1.js  namespaces_2.js  searchdata.js
src/: eigen_example.cpp  finger_dynamics.cpp  finger_model.cpp  main.cpp  open_chain_kinematics.cpp  render_finger.cpp
src/include/: finger_model.hpp  open_chain_kinematics.hpp  render_finger.hpp
tests/: CMakeLists.txt
tests/unit/: test_kinematics.cpp  test_rigid_body_motion.cpp
